<resources>
    <string name="app_name">NoPhish</string>
    <string name="action_restart">Restart</string>
    <string name="start_button">Please click me!</string>
    <string name="hello_result">You came here by clicking a phishedu:// Link!</string>
    <string name="not_connected">Du bist nicht mit Google+ Verbunden</string>
    <string name="title_activity_start_menu">NoPhish</string>
    <string name="title_activity_display_you_dont_believe_us">DisplayYouDontBelieveUsActivity</string>
    <string name="title_activity_send_email">SendEmailActivity</string>
    <string name="title_activity_alert_dialog">AlertDialogActivity</string>
    <string name="title_activity_final_awareness">FinalAwarenessActivity</string>
    <string name="title_activity_resend_email_option">ResendEmailOptionActivity</string>
    <string name="title_activity_resend_email_dialog_option">ResendEmailDialogOptionActivity</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="title_activity_no_awareness">NoAwarenessActivity</string>
    <string name="title_activity_fake_websites_info">FakeWebsitesInfoActivity</string>
    <string name="title_activity_game_intro">GameIntroActivity</string>
    <string name="title_activity_game_introduction">GameIntroductionActivity</string>
    <string name="title_activity_find_address_bar_info">FindAddressBarInfoActivity</string>
    <string name="title_activity_find_address_bar_exercise">FindAddressBarExercise</string>
    <string name="title_activity_web_address_info">WebAddressInfoActivity</string>
    <string name="title_activity_web_address_second_info">WebAddressSecondInfoActivity</string>
    <string name="title_activity_web_address_examples">WebAddressExamplesActivity</string>
    <string name="title_activity_solution_amazon_example">SolutionAmazonExampleActivity</string>
    <string name="title_activity_web_address_google_example">WebAddressGoogleExampleActivity</string>
    <string name="title_activity_solution_google_example">SolutionGoogleExampleActivity</string>
    <string name="title_activity_web_address_faceboook_example">WebAddressFaceboookExample</string>
    <string name="title_activity_solution_facebook_example">SolutionFacebookExampleActivity</string>
    <string name="title_activity_web_address_exercise_intro">WebAddressExerciseIntroActivity</string>
    <string name="title_activity_web_address_exercise_one">WebAddressExerciseOneActivity</string>
    <string name="title_activity_web_address_ex_one_highlight_www">WebAddressExOneHighlightWww</string>
    <string name="title_activity_web_address_ex_one_highlight_paypal_com">WebAddressExOneHighlightPaypalCom</string>
    <string name="title_activity_web_address_ex_one_highlight_path">WebAddressExOneHighlightPath</string>
    <string name="title_activity_web_address_ex_one_wrong_click_path">WebAddressExOneWrongClickPathActivity</string>
    <string name="title_activity_web_address_ex_one_correct_click_paypal_com">WebAddressExOneCorrectClickPaypalCom</string>
    <string name="title_activity_web_address_ex_one_wrong_click_www">WebAddressExOneWrongClickWww</string>
    <string name="title_activity_web_address_ex_one_solution">WebAddressExOneSolutionActivity</string>
    <string name="title_activity_web_address_ex_two">WebAddressExTwoActivity</string>
    <string name="title_activity_nonsense_ipaddresses_lesson">NonsenseIPAddressesLessonActivity</string>
    <string name="title_activity_congrats_web_addresses">CongratsWebAddressesActivity</string>
    <string name="title_activity_ip_nonsense_url_info">IpNonsenseUrlInfoActivity</string>
    <string name="title_activity_ip_nonsense_url_second_info">IpNonsenseUrlSecondInfoActivity</string>
    <string name="title_activity_ip_nonsense_url_examples">IpNonsenseUrlExamplesActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise">IpNonsenseUrlExercise</string>
    <string name="title_activity_ip_nonsende_url_exercise_solution">IpNonsendeUrlExerciseSolutionActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_second_solution">IpNonsenseUrlExerciseSecondSolution</string>
    <string name="title_activity_ip_nonse_url_exercise_wrong_solution">IpNonseUrlExerciseWrongSolutionActivity</string>
    <string name="title_activity_ip_nonsense_url_ex_correct">IpNonsenseUrlExCorrect</string>
    <string name="title_activity_ip_nonsende_url_ex_wrong">IpNonsendeUrlExWrongActivity</string>
    <string name="title_activity_find_address_bar_second_info">FindAddressBarSecondInfoActivity</string>
    <string name="title_activity_email_spoofing_slide_one">E-Mail Absender Fälschung</string>
    <string name="title_activity_email_spoofing_slide_two">E-Mail Absender Fälschung</string>
    <string name="title_activity_email_spoofing_slide_three">E-Mail Absender Fälschung</string>
    <string name="title_activity_email_spoofing_slide_four">E-Mail Absender Fälschung</string>
    <string name="title_activity_email_spoofing_slide_five">E-Mail Absender Fälschung</string>
    <string name="title_activity_level_one">LevelOneActivity</string>
    <string name="title_activity_level_two">LevelTwoActivity</string>
    <string name="title_activity_level_three">LevelThreeActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_two">IpNonsenseUrlExerciseTwoActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_highlight_http">IpNonsenseUrlExerciseHighlightHttpActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_highlight_subdomain">IpNonsenseUrlExerciseHighlightSubdomainActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_highlight_domain">IpNonsenseUrlExerciseHighlightDomainActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_second_solution_wrong">IpNonsenseUrlExerciseSecondSolutionWrong</string>
    <string name="title_activity_end_demo">EndDemoActivity</string>
    <string name="title_activity_ip_nonsense_url_exercise_two_correct_solution">IpNonsenseUrlExerciseTwoCorrectSolution</string>
    <string name="title_activity_backend_test">Backend Test</string>
    <string name="title_activity_awareness">E-Mail Fälschung</string>
    <string name="title_level_1_addr_bar_activity">Die Addressleiste</string>
    <string name="title_activity_level_grid">LevelGridActivity</string>
    <string name="title_activity_urltask">Übung</string>
    <string name="title_email_spoofing">E-Mail Absender Fälschung</string>
    <string name="text_beat_phishing">Schütze dich vor fiesen Tricks!</string>
    <string name="last_page">Das ist die letzte Seite.</string>
    <string name="first_page">Das ist die erste Seite.</string>
    <string name="end_app">App beenden</string>
    <string name="end_app_text">Möchtest du die App wirklich beenden?</string>
    <string name="end_app_yes">Ja</string>
    <string name="end_app_no">Nein</string>
    <string name="start_menu">Lerne, dich gegen die Internetgefahr \"Phishing\" zu schützen!</string>
    <string name="sign_out">Sign Out</string>
    <string name="button_play">Spielen</string>
    <string name="button_play_on">Weiterspielen</string>
    <string name="button_level_overview">Level-Überblick</string>
    <string name="button_more_info">Mehr Informationen</string>
    <string name="button_about">Über uns</string>
    <string name="button_show_online_achievement">Deine Erfolge</string>
    <string name="button_show_leaderboard_rate">Leaderboard Rate</string>
    <string name="button_show_leaderboard_total">Leaderboard Found Phishes</string>
	<string name="button_show_leaderboard_total_points">Highscore</string>
	<string name="button_delete_remote_data">Online Daten Löschen</string>
    <string name="button_next">Weiter</string>
    <string name="info_web_addresses">Mehr zu Web-Adressen</string>
    <string name="info_phishing">Mehr zu Phishing</string>
    <string name="button_show_lectures">Lerneinheiten</string>
    <string name="google_plus_text">Wenn du deine Spielleistung online speichern möchtest, melde dich bei Google+ an.</string>
    <string name="button_social">Google Play</string>
    <string name="info_apwg">Anti-Phishing Working Group</string>
    <string name="info_security_comic">Comics zu Phishing</string>
    <string name="info_how_phishing_works">Wie Phishing funktioniert</string>
    <string name="url_apwg">http://www.antiphishing.org</string>
    <string name="url_securitycomic">http://www.securitycartoon.com</string>
    <string name="url_how_phishing_works">http://computer.howstuffworks.com/phishing.htm</string>
    <string name="title_activity_more_info">Links zu Phishing</string>
    <string name="level_02_intro_10_text_01"><b>Beispiele - Auflösung</b>\n\nIm Folgenden zeigen wir ein paar Beispiele für Webadressen. Überlege dir zunächst selbst, welcher Bereich in den angegebenen Webadressen der Wer-Bereich ist. Überprüfe im Anschluss deine Ergebnisse, indem du fortfährst.</string>
    <string name="level_02_example_amazon_01">http://www.</string>
    <string name="level_02_example_amazon_02">amazon.de</string>
    <string name="level_02_example_gmail_01">https://mail.</string>
    <string name="level_02_example_gmail_02">google.com</string>
    <string name="level_02_example_gmail_03">/mail/</string>
    <string name="level_02_example_gmail_04">\?shva\=1\#inbox</string>
    <string name="level_02_example_ebay_01">http://pages.</string>
    <string name="level_02_example_ebay_02">ebay.de</string>
    <string name="level_02_example_ebay_03">/help/sell/</string>
    <string name="level_02_example_ebay_04">quick-listing-tool.html</string>
    <string name="level_02_example_facebook_01">https://secure.</string>
    <string name="level_02_example_facebook_02">facebook.com</string>
    <string name="level_02_example_facebook_03">/</string>
    <string name="level_02_example_facebook_04">settings?tab=payments</string>
    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="www">www.</string>
    <string name="new_attack"><b>Neuer Angriff</b></string>
    <string name="recognize_attacks"><b>Erkennen von Angriffen</b></string>
    <string name="level_08_intro_02_text_02"></string>
    <string name="level_08_intro_02_text_03">Der wichtigste Bereich einer Webadresse, der Wer-Bereich, muss auch vom Phisher registriert werden. Der Phisher kann hierbei Buchstaben im dir vertrauten Namen mit anderen ähnlichen Zeichen oder Zahlen ersetzen, sodass der Wer-Bereich fast identisch zum dir vertrauten Namen aussieht. Schaue dir also immer die wichtigsten zwei Blöcke der Webadresse an, den Wer-Bereich. Enthält der Wer-Bereich Ersetzungen von Buchstaben durch andere ähnliche Zeichen oder Zahlen, dann <b>gebe hier keine Daten ein!</b>\n\nBeispiele für Phishing-Webadressen, die dieses Prinzip anwenden:     </string>
    <string name="level_08_intro_02_text_04">Ein \"w\" wird durch 2x \"v\" ersetzt:</string>
    <string name="level_08_intro_02_text_05">Ein \"l\" wird druch einem \"i\" ersetzt:</string>
    <string name="level_08_intro_02_text_06">Ein \"l\" wird durch einer \"1\" ersetzt:</string>
    <string name="level_08_intro_02_vvetter">vvetter.com</string>
    <string name="level_08_intro_02_path_01">/wetter_</string>
    <string name="level_08_intro_02_path_02">aktuell/?code=EUDE</string>
    <string name="level_08_intro_02_googie">googie.de</string>
    <string name="level_08_intro_02_path_03">/services</string>
    <string name="level_08_intro_02_path_04">/?fg=1</string>
    <string name="level_08_intro_02_paypa1">paypa1.com</string>
    <string name="level_08_intro_02_path_05">/de/weba</string>
    <string name="level_08_intro_02_path_06">pps/mpp/privatkunden</string>
    <string name="content_desc_attention">Achtung</string>
</resources>