<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartMenuActivity" >

    <!-- sign-in button -->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- sign-out button -->

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:onClick="startGame"
        android:text="@string/button_play" />

    <Button
        android:id="@+id/button_level_overview"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/button_play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_level_overview" />

    <Button
        android:id="@+id/button_more_info"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button_level_overview"
        android:layout_below="@+id/button_level_overview"
        android:layout_marginTop="10dp"
        android:text="@string/button_more_info" />
    
     <Button
        android:id="@+id/button_show_online_achievement"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button_more_info"
        android:layout_below="@+id/button_more_info"
        android:layout_marginTop="10dp"
        android:text="@string/button_show_online_achievement" />
     
      <Button
        android:id="@+id/button_show_leaderboard_rate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button_show_online_achievement"
        android:layout_below="@+id/button_show_online_achievement"
        android:layout_marginTop="10dp"
        android:text="@string/button_show_leaderboard_rate" />
      
       <Button
        android:id="@+id/button_show_leaderboard_total"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button_show_leaderboard_rate"
        android:layout_below="@+id/button_show_leaderboard_rate"
        android:layout_marginTop="10dp"
        android:text="@string/button_show_leaderboard_total" />
      

</RelativeLayout>