<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/level_02_intro_10_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/level_02_intro_10_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/level_02_intro_10_text_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_amazon_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_02_intro_10_text_01"
            android:layout_below="@+id/level_02_intro_10_text_01"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/level_02_example_amazon_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_amazon_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_amazon_01"
            android:layout_alignBottom="@+id/level_02_intro_example_amazon_01"
            android:layout_toRightOf="@+id/level_02_intro_example_amazon_01"
            android:background="@color/domain"
            android:text="@string/level_02_example_amazon_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_gmail_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_02_intro_example_amazon_02"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/level_02_example_gmail_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_gmail_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_gmail_01"
            android:layout_alignBottom="@+id/level_02_intro_example_gmail_01"
            android:layout_toRightOf="@+id/level_02_intro_example_gmail_01"
            android:background="@color/domain"
            android:text="@string/level_02_example_gmail_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_gmail_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_gmail_02"
            android:layout_alignBottom="@+id/level_02_intro_example_gmail_02"
            android:layout_toRightOf="@+id/level_02_intro_example_gmail_02"
            android:text="@string/level_02_example_gmail_03"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_gmail_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_02_intro_example_gmail_01"
            android:text="@string/level_02_example_gmail_04"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_ebay_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_02_intro_example_gmail_04"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/level_02_example_ebay_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_ebay_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_ebay_01"
            android:layout_alignBottom="@+id/level_02_intro_example_ebay_01"
            android:layout_toRightOf="@+id/level_02_intro_example_ebay_01"
            android:background="@color/domain"
            android:text="@string/level_02_example_ebay_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_ebay_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_ebay_02"
            android:layout_alignBottom="@+id/level_02_intro_example_ebay_02"
            android:layout_toRightOf="@+id/level_02_intro_example_ebay_02"
            android:text="@string/level_02_example_ebay_03"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_ebay_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_02_intro_example_ebay_03"
            android:text="@string/level_02_example_ebay_04"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_facebook_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_02_intro_example_ebay_04"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/level_02_example_facebook_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_facebook_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_facebook_01"
            android:layout_alignBottom="@+id/level_02_intro_example_facebook_01"
            android:layout_toRightOf="@+id/level_02_intro_example_facebook_01"
            android:background="@color/domain"
            android:text="@string/level_02_example_facebook_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_facebook_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_02_intro_example_facebook_02"
            android:layout_alignBottom="@+id/level_02_intro_example_facebook_02"
            android:layout_toRightOf="@+id/level_02_intro_example_facebook_02"
            android:text="@string/level_02_example_facebook_03"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_02_intro_example_facebook_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_02_intro_example_facebook_03"
            android:text="@string/level_02_example_facebook_04"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</ScrollView>