<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/level_05_intro_02_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/level_08_intro_02_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/recognize_attacks"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_text_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_08_intro_02_text_01"
            android:layout_below="@+id/level_08_intro_02_text_01"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/level_08_intro_02_text_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_new_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/level_08_warning"
            android:layout_toRightOf="@+id/level_08_warning"
            android:text="@string/new_attack"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_text_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_08_warning"
            android:layout_below="@+id/level_08_warning"
            android:text="@string/level_08_intro_02_text_03"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_text_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_08_intro_02_text_03"
            android:layout_below="@+id/level_08_intro_02_text_03"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/level_08_intro_02_text_04"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_http_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_08_intro_02_text_04"
            android:layout_below="@+id/level_08_intro_02_text_04"
            android:layout_marginTop="@dimen/margin_xxsmall"
            android:text="@string/https"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_www_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_http_01"
            android:layout_alignBottom="@+id/level_08_intro_02_http_01"
            android:layout_toRightOf="@+id/level_08_intro_02_http_01"
            android:text="@string/www"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/level_08_warning"
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_alignLeft="@+id/level_08_intro_02_text_02"
            android:layout_below="@+id/level_08_intro_02_text_02"
            android:contentDescription="@string/content_desc_attention"
            android:layout_marginTop="@dimen/margin_standard"
            android:padding="@dimen/mini_padding"
            android:src="@drawable/dialog_warning" />

        <TextView
            android:id="@+id/level_08_intro_02_vvetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_www_01"
            android:layout_alignBottom="@+id/level_08_intro_02_www_01"
            android:layout_toRightOf="@+id/level_08_intro_02_www_01"
            android:background="@color/red"
            android:text="@string/level_08_intro_02_vvetter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_path_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_vvetter"
            android:layout_alignBottom="@+id/level_08_intro_02_vvetter"
            android:layout_toRightOf="@+id/level_08_intro_02_vvetter"
            android:text="@string/level_08_intro_02_path_01"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_path_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_08_intro_02_http_01"
            android:text="@string/level_08_intro_02_path_02"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_text_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_08_intro_02_path_02"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/level_08_intro_02_text_05"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_http_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_08_intro_02_text_05"
            android:layout_below="@+id/level_08_intro_02_text_05"
            android:layout_marginTop="@dimen/margin_xxsmall"
            android:text="@string/http"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_www_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_http_02"
            android:layout_alignBottom="@+id/level_08_intro_02_http_02"
            android:layout_toRightOf="@+id/level_08_intro_02_http_02"
            android:text="@string/www"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_googie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_www_02"
            android:layout_alignBottom="@+id/level_08_intro_02_www_02"
            android:layout_toRightOf="@+id/level_08_intro_02_www_02"
            android:background="@color/red"
            android:text="@string/level_08_intro_02_googie"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_path_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_googie"
            android:layout_alignBottom="@+id/level_08_intro_02_googie"
            android:layout_toRightOf="@+id/level_08_intro_02_googie"
            android:text="@string/level_08_intro_02_path_03"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_path_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_08_intro_02_http_02"
            android:text="@string/level_08_intro_02_path_04"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_text_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_08_intro_02_path_04"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/level_08_intro_02_text_06"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_http_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/level_08_intro_02_text_06"
            android:layout_below="@+id/level_08_intro_02_text_06"
            android:layout_marginTop="@dimen/margin_xxsmall"
            android:text="@string/http"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_www_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_http_03"
            android:layout_alignBottom="@+id/level_08_intro_02_http_03"
            android:layout_toRightOf="@+id/level_08_intro_02_http_03"
            android:text="@string/www"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_paypa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_www_03"
            android:layout_alignBottom="@+id/level_08_intro_02_www_03"
            android:layout_toRightOf="@+id/level_08_intro_02_www_03"
            android:background="@color/red"
            android:text="@string/level_08_intro_02_paypa1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/level_08_intro_02_path_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/level_08_intro_02_paypa1"
            android:layout_alignBottom="@+id/level_08_intro_02_paypa1"
            android:layout_toRightOf="@+id/level_08_intro_02_paypa1"
            android:text="@string/level_08_intro_02_path_05"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/level_08_intro_02_path_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_08_intro_02_http_03"
            android:text="@string/level_08_intro_02_path_06"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />
    </RelativeLayout>

</ScrollView>